# TwistedFlow

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json
.github/workflows/: build-app.yml  deploy-landing.yml
apps/desktop/: package.json
apps/desktop/src-tauri/crates/twistedflow-engine/: Cargo.toml
apps/desktop/src-tauri/crates/twistedflow-engine/src/: executor.rs  flow_file.rs  graph.rs  lib.rs  node.rs  subflow.rs  template.rs  wasm_host.rs
apps/desktop/src-tauri/crates/twistedflow-nodes/: Cargo.toml
apps/desktop/src-tauri/crates/twistedflow-nodes/src/: break_object.rs  convert.rs  cookie_node.rs  cors_node.rs  emit_event.rs  encode_decode_node.rs  env_setter.rs  env_var.rs  filter_node.rs  for_each.rs  get_variable.rs  hash_node.rs  http_listen.rs  http_request.rs  lib.rs  log_node.rs  make_object.rs  map_node.rs  match_node.rs  merge_node.rs  parse_args.rs  parse_body_node.rs  prompt_node.rs  rate_limit_node.rs  redirect_node.rs  reduce_node.rs  regex_node.rs  retry_node.rs  route_match.rs  route_node.rs  send_response.rs  serve_static_node.rs  set_headers_node.rs  set_variable.rs  start.rs  stderr_node.rs  stdin_node.rs  subflow_inputs.rs  subflow_outputs.rs  tap.rs  (+2 more)
apps/web/: docs.html  index.html
docs/: plugins.md
examples/: README.md  github-user-repos.flow.json  jsonplaceholder-demo.flow.json  rust-executor-test.flow.json  weather-with-error-handling.flow.json
examples/plugins/: README.md
examples/plugins/json-tools/: Cargo.toml  README.md
examples/plugins/json-tools/src/: lib.rs
scripts/: release.ts
(+71 files in other folders)
